# remex

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
bench/: RESULTS.md  benchmark.py  real_embedding_eval.py
docs/: integration-guide.md  scale-architecture.md  specter2-case-study.md
polar_embed/: __init__.py  core.py  gpu.py
polarquant/: __init__.py  codebook.py  core.py  packing.py  rotation.py
remex/: __init__.py  codebook.py  core.py  gpu.py  packing.py
tests/: test_adc_gpu.py  test_coverage_gaps.py  test_matryoshka.py  test_polar_embed.py  test_polarquant.py
